--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,12 @@ header{
 .two label a:hover{
     text-decoration: underline;
 }
+.log{
+    
+   width: 300px;
+   height: 300px;
+   position: relative;
+  }
 @media only screen and (max-width: 786px){
     .nav-button{
         display: none;
